--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -6,5 +6,5 @@
     width: 100%;
     height: 100%;
     display: inline-block;
-    background: linear-gradient(top, rgba(6, 7, 7, 0.5) 0%, rgba(228, 50, 14, 0.5) 100%);
-}    
+    background: linear-gradient(to left, rgba(0, 47, 75, 0.5) 0%, rgba(0, 23, 60, 0.8) 100%);
+}
